Fixed style for too long movie titles

--- a/src/components/styles/MovieCard.module.css
+++ b/src/components/styles/MovieCard.module.css
@@ -5,6 +5,7 @@
     font-weight: bold;
     text-transform: uppercase;
     margin: 10px 0 0 0;
+    width: 30vh;
   }
   
 #dateTitle {
