--- a/src/components/styles/MovieCardDetailed.module.css
+++ b/src/components/styles/MovieCardDetailed.module.css
@@ -70,6 +70,7 @@
     letter-spacing: 4px;
     font-weight: normal;
     text-transform: uppercase;
+    width: 50vh;
   }
   
   .movieCardDetailed img {
